@@ -40,6 +40,9 @@ struct ESLOptions
     std::string statsFilename;
     std::string chromDepthFilename;
     std::string truthVcfFilename;
+
+    /// TODO remove the need for this bool by having a single overlap pair handler
+    bool isRNA = false;
 };
 
 
