@@ -1049,9 +1049,9 @@ SVCandidateAssemblyRefiner(
     _opt(opt),
     _header(header),
     _smallSVAssembler(opt.scanOpt, opt.refineOpt.smallSVAssembleOpt, opt.alignFileOpt,
-                      opt.statsFilename, opt.chromDepthFilename, header, counts, edgeTracker.remoteTime),
+                      opt.statsFilename, opt.chromDepthFilename, header, counts, opt.isRNA, edgeTracker.remoteTime),
     _spanningAssembler(opt.scanOpt, opt.refineOpt.spanningAssembleOpt, opt.alignFileOpt,
-                       opt.statsFilename, opt.chromDepthFilename, header, counts, edgeTracker.remoteTime),
+                       opt.statsFilename, opt.chromDepthFilename, header, counts, opt.isRNA, edgeTracker.remoteTime),
     _smallSVAligner(opt.refineOpt.smallSVAlignScores),
     _largeSVAligner(opt.refineOpt.largeSVAlignScores,opt.refineOpt.largeGapOpenScore),
     _largeInsertEdgeAligner(opt.refineOpt.largeInsertEdgeAlignScores),
